<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/titulo_configTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="30dp"
        android:text="@string/titulo_app"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/servidor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/servidor"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/ipServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:height="@dimen/activity_horizontal_margin"
        android:hint="@string/hintServer" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/porta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/port"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/serverPort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:height="@dimen/activity_horizontal_margin"
        android:inputType="number"
        android:hint="@string/hintPort" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.43"
            android:height="@dimen/activity_vertical_margin"
            android:text="@string/save"
            android:width="@dimen/activity_horizontal_margin" />

        <Button
            android:id="@+id/cancelLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.46"
            android:height="@dimen/activity_vertical_margin"
            android:text="@string/cancel"
            android:width="@dimen/activity_horizontal_margin" />

    </LinearLayout>

</LinearLayout>
